# codegen

./: codegen.py  jsongen.py  meson.build  rpcgen.py  sqlitegen.py
include/codegen/: glibwrapper.h  rpcgen.h
